--- a/ComposeTutorial/app/src/main/res/values/strings.xml
+++ b/ComposeTutorial/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ComposeTutorial</string>
+    <string name="profileName" />
+    <string name="imageUri" />
 </resources>
