Working on Final Project
Shopping list app. Splash screen, List, Information about nearby stores, Testing

--- a/ComposeTutorial/app/src/main/res/values/strings.xml
+++ b/ComposeTutorial/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">ComposeTutorial</string>
     <string name="profileName" />
     <string name="imageUri" />
+    <string name="theList" />
+    <string name="title_activity_maps">MapsActivity</string>
+    <string name="listOfItems" />
 </resources>
